--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FakeStore</title>
+  <title>Quick Shop</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -20,6 +20,7 @@
 <body>
   <header></header>
   <main class="main">
+    <!-- Search Field  -->
     <div class="search-field">
       <div class="search-box">
         <input id="input-field" class="search-field" type="text" />
@@ -29,14 +30,18 @@
         </button>
       </div>
     </div>
+
     <div class="row">
+      <!-- Product Field  -->
       <div class="col-md-9 col-lg-9 col-sm-7">
+        <!-- All Products  -->
         <div id="all-products" class="">
-          <h1></h1>
         </div>
       </div>
+      <!-- Calculation Area  -->
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
+          <!-- Table content  -->
           <table class="table">
             <thead>
               <h1>My-Cart</h1>
@@ -79,11 +84,13 @@
               </tr>
             </tbody>
           </table>
+
           <div class="parces text-center">
             <button class="btn btn-primary text-center">Buy Now</button>
           </div>
         </div>
       </div>
+      <!-- End Calculation Area  -->
     </div>
   </main>
   <footer></footer>
