Price issue fixed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <td></td>
               </tr>
               <tr>
-                <th>Price:</th>
+                <th>Total Product-Price:</th>
                 <td>$ <span id="price">0</span></td>
                 <td></td>
                 <td></td>
