--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quick Shop</title>
+  <title>Online Shop</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -15,22 +15,27 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+
+
 </head>
 
 <body>
-  <header></header>
+  <h1 style="text-align: center;">Online <span class="checked">Shop</span></h1>
+  <header>
+
+  </header>
   <main class="main">
+    <!-- <h1>Online <span class="checked">Shop</span></h1> -->
     <!-- Search Field  -->
     <div class="search-field">
       <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
+        <input id="input-field" class="" type="text" placeholder="Search Your Product Here...">
+        <button type="button" class="btn btn-danger search-button" data-toggle="button" aria-pressed="false"
           autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
+          Search <i class="fas fa-search"></i>
         </button>
       </div>
     </div>
-
     <div class="row">
       <!-- Product Field  -->
       <div class="col-md-9 col-lg-9 col-sm-7">
@@ -97,6 +102,8 @@
 
   <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
+  <!-- my font awesome kit  -->
+  <script src="https://kit.fontawesome.com/ffd84caa02.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
